zebrunner api tests were added